fix mobile nav z-index

--- a/assets/scss/base/_nav.scss
+++ b/assets/scss/base/_nav.scss
@@ -44,6 +44,7 @@
 .mobile-nav-expanded {
   
   position: fixed;
+  z-index: 10;
   top: 0px;
   height: 0%;
   overflow: hidden;
