--- a/assets/scss/layouts/_l-index.scss
+++ b/assets/scss/layouts/_l-index.scss
@@ -103,6 +103,7 @@
       position: absolute;
       left: 0px;
       top: 4px;
+      z-index: 0;
     }
     
     &--vcard {
